# cmake-ctest

./: BUILD.bazel  MODULE.bazel  README.md
app/: BUILD.bazel  CMakeLists.txt  main.cpp
lib/: BUILD.bazel  CMakeLists.txt  hello.cpp  hello.h  test_hello.cpp
lib2/: BUILD.bazel  hello2.cpp  hello2.h  test_hello2.cpp
